student profile details

--- a/tempcode/studentdetails.html
+++ b/tempcode/studentdetails.html
@@ -13,6 +13,7 @@
             <!-- <p>{{.First_Name}} {{.Last_Name}}</p> -->
             <p>Kamukwamba Masupha</p>
         </div>
+        <hr>
         <div class="student_personal_information">
             <p>Phone Number: {{.Phone_Number}}</p>
             <p>Email: {{.Email}}</p>
@@ -20,10 +21,28 @@
             <p>Gender: {{.Gender}}</p>
             <p>Marital Status: {{.Marital_Status}}</p>
             <p>Education background: {{.Education_Background}}</p>
-            <p>: {{.Gender}}</p>
+            <p>Program:{{.program}}</p>
+            <p>High School Confirmation:{{.High_School}}</p>
+            <p>Grammer Confirmation: {{.Grammer_Verification}}</p>
+            <p>Waiver: {{.Waiver}}</p>
+            <p>Children: {{.Children}}</p>
+            <p>School Attended:{{.School_Attend}}</p>
+            <p>Program Studied:{{.Major_In}}</p>
+            <p>Degre Obtained: {{.Degree_Obtained}}</p>
+            <p>Current Occupation: {{.Current_Occupation}}</p>
+            <p>Field of interested in {{.Field_Interested}}</p>
+            <p>Prio Techniques Studied {{.Prio_Techniques}}</p>
+            <p>Previous Experience {{.Previouse_Experience}}</p>
+            <p>Purpose of enrollment {{.Purpose_of_Enrollment}}</p>
+            <p>Use of Knowledge odtained {{.Use_of_knowledge}}</p>
+            <p>Reason for chosing UCMS {{.Reason_For_Choice}}</p>
+            <p>How did they find out about UCMS {{.Method_Of_Encounter}}</p>
+            
+        </div>
+        <div class="student_programs">
+
 
         </div>
-        <div class="student_programs"></div>
 
     </div>
     
